@@ -12,6 +12,7 @@ CHANGELOG and HISTORY ( we try )                                         Okatea
 
 1.0.BETA.3
 ! new breadcrumb policy
+! introduce navigation menus management
 . deletion of old stuff
 
 
